--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <div class="img"><img src="./assets/img2.jpg" alt="" /></div>
       <div class="img"><img src="./assets/img3.jpg" alt="" /></div>
       <div class="img"><img src="./assets/img4.jpg" alt="" /></div>
-      <div class="img"><img src="./assets/img5.jpg" alt="" /></div>
+      <div class="img"><img src="./assets/img3.jpg" alt="" /></div>
     </div>
 
-    <audio class="sound" src="./assets/piano-c_C_major.wav"></audio>
+    <audio class="sound" src="./assets/piano-c_C_major.mp3"></audio>
     <audio class="sound" src="./assets/piano-d_D_major.wav"></audio>
     <audio class="sound" src="./assets/piano-e_E_major.wav"></audio>
     <audio class="sound" src="./assets/piano-g_G_major.wav"></audio>
