--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="img"><img src="./assets/img3.jpg" alt="" /></div>
     </div>
 
-    <audio class="sound" src="./assets/piano-c_C_major.mp3"></audio>
+    <audio class="sound" src="./assets/piano-c_C_major.wav"></audio>
     <audio class="sound" src="./assets/piano-d_D_major.wav"></audio>
     <audio class="sound" src="./assets/piano-e_E_major.wav"></audio>
     <audio class="sound" src="./assets/piano-g_G_major.wav"></audio>
