--- a/dice.html
+++ b/dice.html
@@ -15,13 +15,14 @@
       height: 100vh;
       background-color: rgb(143, 210, 152);
     }
-    h1,h3{
+    
+    h3 {
       background-image: url(https://img.freepik.com/free-vector/realistic-red-blue-flames-background_52683-13604.jpg?ga=GA1.1.466282671.1742998575&semt=ais_hybrid);
       color: transparent;
       -webkit-background-clip: text;
-      animation: dice 1s ease 1s 100000 alternate ;
+      animation: dice 1s ease 1s 100000 alternate;
     }
-/*     
+    /*     
     @keyframes dice {
       from{
         transform: translate(100px);
@@ -30,12 +31,11 @@
         transform: translate(-100px);
       }
     } */
-
-    
   </style>
-  <body>
+      <h1><span>🎲</span> Realistic Dice Roll Game 🎲</h1>
+      <body>
     <div class="container">
-      <h1>Welcome to Dice <br />Game</h1>
+
       <div class="maindice">
         <div class="diceimg">
           <h3>PLAYER 1</h3>
@@ -95,6 +95,5 @@
         }, 100);
       });
     </script>
-
   </body>
 </html>
